--- a/client/src/index.css
+++ b/client/src/index.css
@@ -268,3 +268,241 @@
     text-align: center;
     font-weight: bold;
 }
+
+.login{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 10;
+}
+.login form{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    transition: 0.5s ease-in-out;
+}
+.login form > *{
+    margin: 14px;
+}
+.login form > h5{
+    margin: 0px;
+    margin-bottom: 7px;
+}
+.login .form-enter{
+    top: 40%;
+}
+.login form > input{
+    font-size: small;
+    border: none;
+    border-bottom: 1px solid rgb(123, 173, 189);
+    transition: 0.3s ease-in-out;
+}
+.login form > input:focus{
+    outline: none;
+    border-bottom: 2px solid rgb(76, 134, 153);
+}
+.login .form-enter-active{
+    top: 50%;
+}
+.login .form-exit-active{
+    top: 30%;
+}
+
+.btn-login-state{
+    cursor: pointer;
+    background-color: green;
+    color: white;
+    width: fit-content;
+    font-size: small;
+    padding: 3px 20px
+}
+.login form > h6{
+    margin: 0;
+    padding: 0;
+    font-size: 0.6rem;
+    color: red;
+    text-align: center;
+}
+.login form > h3{
+    font-size: 1rem;
+    margin: 0;
+    text-align: center;
+    color: rgb(234, 5, 255);
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(52, 165, 175);
+    padding: 10px;
+}
+.header h1{
+    color: white;
+    text-shadow: 2px 2px 0.6px rgb(0, 247, 255);
+    margin: 20px;
+}
+.btn-name{
+    margin: 20px;
+    font-size: small;
+    background-color: white;
+    padding: 5px 14px;
+    border-radius: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.profile-downbar{
+    position: absolute;
+    padding: 0;
+    background-color: white;
+    list-style-type: none;
+    z-index: 10;
+    display: none;
+    transition: 0.4s ease-in-out;
+    animation: downbar 0.4s ease-in-out;
+}
+.profile-downbar.open{
+    display: block;
+}
+@keyframes downbar {
+    from{opacity: 0;}to{opacity: 1;}
+}
+.profile-downbar li{
+    border: 1px solid black;
+    padding: 5px 20px;
+    cursor: pointer;
+    font-size: small;
+    font-weight: bold;
+}
+.profile-downbar li:last-child{
+    background-color: red;
+    color: white;
+}
+
+@media only screen and (max-width: 700px){
+    .login form{
+        width: 90%;
+    }
+    .header{
+        padding: 0;
+    }
+    .btn-name{
+        font-size: 0.5rem;
+    }
+    .all-schedules{
+        margin: 40px 15px;
+    }
+    .schedule{
+        width: 100%;
+        margin: 40px 0;
+    }
+.weeks{
+    margin: 20px auto;
+}
+
+.schedules-add{
+    margin: 20px;
+}
+.schedules-add-form{
+    width: 100%;
+    margin: 0;
+}
+.time{
+    margin: 10px;
+}
+.schedule-times{
+    display: flex;
+    justify-content: space-around;
+}
+.schedule-times h4{
+    font-size: 0.9rem;
+}
+.schedule-time p{
+    font-size: 1.1rem;
+}
+.no-schedule{
+    margin: 30px 5px;
+    font-size: 1.1rem;
+}
+.btn-schedule{
+    font-size: 70px;
+    text-align: center;
+}
+.btn-schedule-delete{
+    font-size: 1rem;
+}
+.home-text{
+    margin: 20px auto;
+}
+
+.link-container{
+    margin: 10px 0;
+}
+.btn-dark{
+    font-size: 0.7rem;
+    padding: 5px 20px;
+}
+
+.blocked-apps-page, .limited-apps-page{
+    width: 95%;
+    margin: 20px auto;
+}
+.blocked-apps {
+    width: 100%;
+    margin: 10px auto;
+}
+.blocked-apps .li{
+    font-size: 16px;
+    margin: 15px;
+    padding: 5px 30px;
+}
+
+.add-apps{
+    display: flex;
+    justify-content: center;
+    margin: 0px auto;
+}
+.add-apps input{
+    width: 80%;
+    font-size: small;
+    padding: 2px 0;
+}
+.form-modal{
+    width: 95%;
+    padding: 20px;
+}
+.form-modal .info{
+    margin: 20px;
+}
+.form-modal input{
+    margin-bottom: 30px;
+    
+}
+.app-input{
+    margin-bottom: 10px;
+}
+
+.limited-apps-container{
+    margin: 5px;
+}
+.limited-apps-container .li > p{
+    align-items: center;
+    font-size: 20px;
+}
+.limited-apps-container .li{
+    padding: 0 30px;
+}
+.time-container{
+    font-size: 13px;
+}
+}
